--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bookshelf": "^0.14.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "knex": "^0.13.0",
     "morgan": "~1.9.0",
+    "pg": "^7.8.0",
     "pg-promise": "^8.5.4"
   },
   "devDependencies": {
